--- a/helios/index.html
+++ b/helios/index.html
@@ -10,7 +10,7 @@
 <body class="h-100" style="background-color:#03111A">  
   <div class="d-flex flex-column container">
     <div class="container flex-row align-items-center text-center mt-0">
-        <img class="img-fluid" src="img/HeliosLabs.png" height="500">
+        <img class="img-fluid" src="img/HeliosLabs.png" width="100%" height="400">
     </div>
     <div class="d-flex flex-row container justify-content-around">
         <div class="d-flex flex-column">
