--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <title>Amith Mathew | Code and Contemplation</title>
 <meta name="title" content="Amith Mathew" />
 <meta name="description" content="An itinerant mind." />
-<meta name="keywords" content="" />
+<meta name="keywords" content="ai,llm,rag,rerank," />
 
 
 <meta property="og:title" content="Amith Mathew" />
@@ -237,5 +237,7 @@
 
     
 </body>
+
+
 
 </html>
