--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="An itinerant mind." />
-<meta name="keywords" content="" />
+<meta name="keywords" content="ai,llm,rag,rerank," />
 
 
 <meta property="og:title" content="404 Page not found" />
@@ -226,5 +226,7 @@
 
     
 </body>
+
+
 
 </html>
