--- a/public/when-does-a-reranking-step-with-rag-make-sense/index.html
+++ b/public/when-does-a-reranking-step-with-rag-make-sense/index.html
@@ -278,7 +278,7 @@
     id3-. Similarity Search .->id3
     end
 
-    id7[[Reranking MOdel]]
+    id7[[Reranking Model]]
 
     sg1-- Document Chunks -->id7
     id6-->id7
