customer-segmentation-part1

--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="An itinerant mind." />
-<meta name="keywords" content="ai,llm,rag,rerank," />
+<meta name="keywords" content="ai,big-data,customer-segmentation,datalake,lakehouse,llm,marketing,personal,philosophy,rag,rerank," />
 
 
 <meta property="og:title" content="404 Page not found" />
