--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <title>Amith Mathew | Code and Contemplation</title>
 <meta name="title" content="Amith Mathew" />
 <meta name="description" content="An itinerant mind." />
-<meta name="keywords" content="ai,llm,rag,rerank," />
+<meta name="keywords" content="ai,big-data,customer-segmentation,datalake,lakehouse,llm,marketing,personal,philosophy,rag,rerank," />
 
 
 <meta property="og:title" content="Amith Mathew" />
