--- a/helios/index.html
+++ b/helios/index.html
@@ -61,6 +61,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GE32DPG30J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GE32DPG30J');
+</script>
   <body class="h-100">
     <div class="container">
       <img class="banner-image" src="img/HeliosLabs.png" alt="Helios Labs">
